Completed refactoring positioning. Application compiles but there are still errors.